--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "eslint": "^9.29.0",
     "eslint-plugin-vue": "~10.2.0",
     "globals": "^16.2.0",
+    "less": "^4.3.0",
     "prettier": "3.5.3",
+    "sass": "^1.89.2",
     "unplugin-auto-import": "^19.3.0",
     "unplugin-vue-components": "^28.7.0",
     "vite": "^7.0.0",
