--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "vite --mode development",
+    "dev:staging": "vite --mode staging",
+    "build": "vite build --mode production",
+    "build:staging": "vite build --mode staging",
+    "build:dev": "vite build --mode development",
     "preview": "vite preview",
+    "preview:staging": "vite preview --mode staging",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "env:check": "node scripts/check-env.js"
   },
   "dependencies": {
     "ant-design-vue": "^4.2.6",
+    "nprogress": "^0.2.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
