--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,7 @@
 NODE_ENV=production
 
 # API配置
-VITE_API_BASE_URL=https://api.yourdomain.com/api
+VITE_API_BASE_URL=https://ljspafsllrbh.sealoshzh.site
 VITE_API_TIMEOUT=30000
 
 # 应用配置
